@@ -1,0 +1,45 @@
+/*
+Redline Smalltalk is licensed under the MIT License
+
+Redline Smalltalk Copyright (c) 2010 James C. Ladd
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software
+and associated documentation files (the "Software"), to deal in the Software without restriction,
+including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
+and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so,
+subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial
+portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
+LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. 
+IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE 
+SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+*/
+package st.redline.smalltalk;
+
+public class Bootstrapper {
+
+	private final Smalltalk smalltalk;
+
+	public Bootstrapper(Smalltalk smalltalk) {
+		this.smalltalk = smalltalk;
+	}
+
+	public void bootstrap() {
+		smalltalk.basicAtPut("ProtoObject", bootstrapProtoObject());
+	}
+
+	private ProtoObject bootstrapProtoObject() {
+		ProtoObject protoObject = ProtoObject.createBasicClass(0);
+		protoObject.basicClass(protoObject);
+		protoObject.basicSuperclass(createSuperProtoObject());
+		return protoObject;
+	}
+
+	private ProtoObject createSuperProtoObject() {
+		return ProtoObject.createBasicClass(0);
+	}
+}
