@@ -1,4 +1,4 @@
 
 "im a comment"
-Object new. ^Object new.
+ProtoObject new.
 
